# mammoth-cli

./: Cargo.toml  LICENSE  README.md  doc.md  example.config.json
src/: cli.rs  config.rs  lib.rs  main.rs  manager.rs  project.rs  utils.rs
