[package]
name = "mammoth-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mulander-J<mulander_j@outlook.com>"]
description = "A frontend project scaffolding CLI tool"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
colored = "2.0"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
futures = "0.3"
walkdir = "2.0"
git2 = "0.18"
dirs = "5.0"
