[package]
name = "mammoth-cli"
version = "0.2.0"
edition = "2021"
authors = ["Mulander-J<mulander_j@outlook.com>"]
description = "A frontend project scaffolding CLI tool"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive", "std", "help"], default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "process"] }
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"
dirs = "5.0"
